path/to/your/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: testdevopsprojects.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix-app
            port:
              number: 80
